--- a/carousel.html
+++ b/carousel.html
@@ -9,14 +9,16 @@
     <!-- bootstarp css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- my custom css link here -->
     <link rel="stylesheet" href="css/carousel.css">
 </head>
 
 <body>
-
-    <header class="">
+    <!-- <header data-bs-theme="dark"></header> -->
+    <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark fixed-top" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="#">
                     <img src="images/sjal.jpg" alt="Logo" width="60"
@@ -62,8 +64,8 @@
             </div>
         </nav>
         <!-- Carousel -->
-        <!-- <div class="carousel-item active custom-carousel-item" data-bs-interval=""></div> -->
-        <section class="container-fluid m-0 p-0">
+        <!-- <div class="carousel-item active custom-carousel-item" data-bs-interval="2000"></div> -->
+        <section class="container-fluid mx-0 px-0" style="margin-top: 85px;">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0"
@@ -123,9 +125,65 @@
             </div>
         </section>
     </header>
+    <!-- header close -->
 
-
-
+    <main class="container-fluid bg-dark">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center text-white cotain-mb">
+            <div class="col">
+                <div class="contain-heading-img mt-5 mx-5 pt-4 px-4">
+                    <img class="w-50 rounded-circle" src="images/sjal.jpg" alt="">
+                </div>
+                <div class="contain-heading-info px-4">
+                    <h3>Sajal Hossain 2023</h3>
+                    <p>
+                        Some representative placeholder content for the three columns of text below the carousel. This
+                        is the first column.
+                    </p>
+                    <button class="btn btn-secondary">View Details >></button>
+                </div>
+            </div>
+            <div class="col">
+                <div class="contain-heading-img mt-5 mx-5 pt-4 px-4">
+                    <img class="w-50 rounded-circle" src="images/sajal2.jpg" alt="">
+                </div>
+                <div class="contain-heading-info  px-4">
+                    <h3>Sajal Hossain 2019</h3>
+                    <p>
+                        Another exciting bit of representative placeholder content. This time, we've moved on to the
+                        second column.
+                    </p>
+                    <button class="btn btn-secondary">View Details >></button>
+                </div>
+            </div>
+            <div class="col">
+                <div class="contain-heading-img mt-5 mx-5 pt-4 px-4">
+                    <img class="w-50 rounded-circle" src="images/sajal-3.png" alt="">
+                </div>
+                <div class="contain-heading-info  px-4">
+                    <h3>Sajal Hossain 2020</h3>
+                    <p>
+                        And lastly this, the third column of representative placeholder content.
+                    </p>
+                    <button class="btn btn-secondary">View Details >></button>
+                </div>
+            </div>
+        </div>
+        <!-- close contain section -->
+        <hr class="container text-white">
+        <section class="d-sm-block d-md-flex d-lg-flex align-items-center text-white pb-5 aside-margin">
+            <aside class="aside-info-container">
+                <h1 class="">
+                    First featurette heading. It’ll blow your mind.
+                </h1>
+                <p>
+                    Some great placeholder content for the first featurette here. Imagine some exciting prose here.
+                </p>
+            </aside>
+            <aside class="aside-img-container">
+                <img class="img-thumbnail rounded-3" src="images/aisde-img.png" alt="">
+            </aside>
+        </section>
+    </main>
 
 
     <!-- bootstarp js link -->
