--- a/carousel.html
+++ b/carousel.html
@@ -170,9 +170,9 @@
         </div>
         <!-- close contain section -->
         <hr class="container text-white">
-        <section class="d-sm-block d-md-flex d-lg-flex align-items-center text-white pb-5 aside-margin">
+        <section class="d-sm-block d-md-block d-lg-flex align-items-center text-white aside-margin">
             <aside class="aside-info-container">
-                <h1 class="">
+                <h1>
                     First featurette heading. It’ll blow your mind.
                 </h1>
                 <p>
@@ -181,6 +181,20 @@
             </aside>
             <aside class="aside-img-container">
                 <img class="img-thumbnail rounded-3" src="images/aisde-img.png" alt="">
+            </aside>
+        </section>
+        <!-- first aside close -->
+        <hr class="container text-white">
+        <section class="buttom-section row text-white d-flex align-items-center mt-5 pt-4">
+            <aside class="col-lg-5 ps-5">
+                <img class="img-thumbnail rounded-3" src="images/aisde-img.png" alt="">
+            </aside>
+            <aside class="col-lg-7 pe-5 ps-5 mt-4">
+                <h1 class="fs-1">Oh yeah, it’s that good. See for yourself.</h1>
+                <p class="fs-4">Another featurette? Of course. More placeholder content here to give you an idea of how
+                    this layout
+                    would work with some
+                    actual real-world content in place.</p>
             </aside>
         </section>
     </main>
